--- a/templates/horarios/horarios_por_ambiente.html
+++ b/templates/horarios/horarios_por_ambiente.html
@@ -53,7 +53,7 @@
                                 <select class="form-select" aria-label="Default select example" id="combo_semestre">
                                     <option selected>[-- SELECCIONE --]</option>
                                     {% for semestre in semestres %}
-                                    <option value="{{ semestre[1] }}">{{ semestre[1] }}</option>
+                                    <option value="{{ semestre.idsemestre }}">{{ semestre.descripcion }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
@@ -92,7 +92,7 @@
                         <table class="horario-table table-bordered text-center" id="horario-table">
                             <thead class="border border-warning bg-blue-horario-usat">
                                 <tr>
-                                    <th scope="col" class="border border-warning text-dark" ></th>
+                                    <th scope="col" class="border border-warning text-dark"></th>
                                     <th scope="col" class="border border-warning text-light">Lunes</th>
                                     <th scope="col" class="border border-warning text-light">Martes</th>
                                     <th scope="col" class="border border-warning text-light">Miércoles</th>
@@ -105,7 +105,7 @@
                                 <tr>
                                     <th scope="row" class="border border-warning text-dark">{{ hora }}:00 - {{ hora + 1
                                         }}:00</th>
-                                    <td class="border border-warning horario-celda" ></td>
+                                    <td class="border border-warning horario-celda"></td>
                                     <td class="border border-warning horario-celda"></td>
                                     <td class="border border-warning horario-celda"></td>
                                     <td class="border border-warning horario-celda"></td>
@@ -120,99 +120,102 @@
                     </div>
                 </div>
             </div>
-            <div href="#" id="" data-href="" class="btn btn-success foot" style="height: 20px;"></div>
+
         </div>
     </div>
+</div>
 
-    <script>
-        $(document).ready(function () {
-            $('#combo_edificio').change(function () {
-                var edificioId = $(this).val();
-                console.log("ID de Edificio Seleccionado:", edificioId);
+<script>
+    $(document).ready(function () {
+        $('#combo_edificio').change(function () {
+            var edificioId = $(this).val();
+            console.log("ID de Edificio Seleccionado:", edificioId);
 
-                $.ajax({
-                    url: '/ambientes_por_edificio/' + encodeURIComponent(edificioId),
-                    type: 'GET',
-                    success: function (data) {
-                        console.log("Datos recibidos:", data);
-                        var $comboAmbiente = $('#combo_ambiente');
-                        $comboAmbiente.empty();
-                        $comboAmbiente.append('<option selected>[-- SELECCIONE --]</option>');
-                        if (data.length > 0) {
-                            $.each(data, function (index, ambiente) {
-                                $comboAmbiente.append('<option value="' + ambiente.idambiente + '">' + ambiente.nombre + '</option>');
-                            });
-                        } else {
-                            $comboAmbiente.append('<option>No hay ambientes disponibles</option>');
-                        }
-                    },
-                    error: function (xhr, status, error) {
-                        console.error("Error:", error);
-                        Swal.fire({
-                            title: 'Error',
-                            text: 'No se pudieron obtener los ambientes. Por favor, intente nuevamente.',
-                            icon: 'error',
-                            confirmButtonText: 'OK'
+            $.ajax({
+                url: '/ambientes_por_edificio/' + encodeURIComponent(edificioId),
+                type: 'GET',
+                success: function (data) {
+                    console.log("Datos recibidos:", data);
+                    var $comboAmbiente = $('#combo_ambiente');
+                    $comboAmbiente.empty();
+                    $comboAmbiente.append('<option selected>[-- SELECCIONE --]</option>');
+                    if (data.length > 0) {
+                        $.each(data, function (index, ambiente) {
+                            $comboAmbiente.append('<option value="' + ambiente.idambiente + '">' + ambiente.nombre + '</option>');
                         });
+                    } else {
+                        $comboAmbiente.append('<option>No hay ambientes disponibles</option>');
                     }
-                });
+                },
+                error: function (xhr, status, error) {
+                    console.error("Error:", error);
+                    Swal.fire({
+                        title: 'Error',
+                        text: 'No se pudieron obtener los ambientes. Por favor, intente nuevamente.',
+                        icon: 'error',
+                        confirmButtonText: 'OK'
+                    });
+                }
             });
-
-            $('#combo_ambiente').change(function () {
-                var ambienteId = $(this).val();
-                console.log("ID de Ambiente Seleccionado:", ambienteId);
-
-                $.ajax({
-                    url: '/horarios_por_ambiente/' + encodeURIComponent(ambienteId),
-                    type: 'GET',
-                    success: function (data) {
-                        console.log("Horarios recibidos:", data);
-                        // Reiniciar las clases de las celdas
-                        $('.horario-celda').removeClass('horario-asignado');
-
-                        // Iterar sobre los horarios y resaltar las celdas correspondientes
-                        $.each(data, function (index, horario) {
-                            var diaMap = {
-                                'Lunes': 0,
-                                'Martes': 1,
-                                'Miércoles': 2,
-                                'Jueves': 3,
-                                'Viernes': 4
-                            };
-
-                            var diaIndex = diaMap[horario.dia];
-                            var horaInicio = parseInt(horario.horainicio.split(':')[0]);
-                            var horaFin = parseInt(horario.horafin.split(':')[0]);
-
-                            console.log("Dia Index:", diaIndex);
-                            console.log("Hora Inicio:", horaInicio);
-                            console.log("Hora Fin:", horaFin);
-
-                            if (diaIndex !== undefined && horaInicio >= 7 && horaFin <= 22) {
-                                for (var hora = horaInicio; hora < horaFin; hora++) {
-                                    var horaIndex = hora - 7;
-                                    var $celda = $('.horario-table tbody tr').eq(horaIndex).find('td').eq(diaIndex);
-                                    console.log("Celda seleccionada para el horario:", $celda);
-                                    $celda.addClass('horario-asignado');
-                                }
-                            }
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        console.error("Error:", error);
-                        Swal.fire({
-                            title: 'Error',
-                            text: 'No se pudieron obtener los horarios del ambiente. Por favor, intente nuevamente.',
-                            icon: 'error',
-                            confirmButtonText: 'OK'
-                        });
-                    }
-                });
-            });
-
         });
-    </script>
+
+        $('#combo_ambiente').change(function () {
+            var ambienteId = $(this).val();
+            console.log("ID de Ambiente Seleccionado:", ambienteId);
+
+            $.ajax({
+                url: '/horarios_por_ambiente/' + encodeURIComponent(ambienteId) + '/' + encodeURIComponent($("#combo_semestre").val()),
+
+                type: 'GET',
+                success: function (data) {
+                    console.log("Horarios recibidos:", data);
+                    // Reiniciar las clases de las celdas
+                    $('.horario-celda').removeClass('horario-asignado');
+
+                    // Iterar sobre los horarios y resaltar las celdas correspondientes
+                    $.each(data, function (index, horario) {
+                        var diaMap = {
+                            'Lunes': 0,
+                            'Martes': 1,
+                            'Miércoles': 2,
+                            'Jueves': 3,
+                            'Viernes': 4
+                        };
+
+                        var diaIndex = diaMap[horario.dia];
+                        var horaInicio = parseInt(horario.horainicio.split(':')[0]);
+                        var horaFin = parseInt(horario.horafin.split(':')[0]);
+
+                        console.log("Dia Index:", diaIndex);
+                        console.log("Hora Inicio:", horaInicio);
+                        console.log("Hora Fin:", horaFin);
+
+                        if (diaIndex !== undefined && horaInicio >= 7 && horaFin <= 22) {
+                            for (var hora = horaInicio; hora < horaFin; hora++) {
+                                var horaIndex = hora - 7;
+                                var $celda = $('.horario-table tbody tr').eq(horaIndex).find('td').eq(diaIndex);
+                                console.log("Celda seleccionada para el horario:", $celda);
+                                $celda.addClass('horario-asignado');
+                                $celda.text(horario.nombre_curso); // Agregar el nombre del curso a la celda
+                            }
+                        }
+                    });
+                },
+                error: function (xhr, status, error) {
+                    console.error("Error:", error);
+                    Swal.fire({
+                        title: 'Error',
+                        text: 'No se pudieron obtener los horarios del ambiente. Por favor, intente nuevamente.',
+                        icon: 'error',
+                        confirmButtonText: 'OK'
+                    });
+                }
+            });
+        });
+
+    });
+</script>
 
 
 
-    {% endblock %}
+{% endblock %}
